- configure: try to split AC_CONFIG_FILES by category

--- a/configure.ac
+++ b/configure.ac
@@ -354,6 +354,7 @@ AC_SUBST(LUA_LIBS)
 AC_SUBST(BLURAY_LIBS)
 AC_SUBST(LIBCOOLSTREAM_STATIC_DIR)
 
+# Makefiles
 AC_CONFIG_FILES([
 Makefile
 data/Makefile
@@ -401,13 +402,12 @@ data/pictures/screensaver/Makefile
 data/policy/Makefile
 data/scripts/Makefile
 data/themes/Makefile
-data/themes/Material_Blue-Grey.theme
-data/themes/Grey-Blue/Makefile
-data/themes/Grey-Blue/icons/Makefile
-data/themes/Grey-Blue/icons/buttons/Makefile
 data/themes/Grey-3.0/Makefile
 data/themes/Grey-3.0/icons/Makefile
 data/themes/Grey-3.0/icons/buttons/Makefile
+data/themes/Grey-Blue/Makefile
+data/themes/Grey-Blue/icons/Makefile
+data/themes/Grey-Blue/icons/buttons/Makefile
 data/themes/Neutrino-3.0/Makefile
 data/themes/Neutrino-3.0/icons/Makefile
 data/themes/Neutrino-3.0/icons/buttons/Makefile
@@ -456,7 +456,6 @@ src/gui/widget/Makefile
 src/gui/widget/yaft/Makefile
 src/lcddisplay/Makefile
 src/nhttpd/Makefile
-src/nhttpd/nhttpd.conf
 src/nhttpd/tuxboxapi/Makefile
 src/nhttpd/yhttpd_core/Makefile
 src/nhttpd/yhttpd_mods/Makefile
@@ -467,6 +466,16 @@ src/timerd/Makefile
 src/zapit/Makefile
 src/zapit/lib/Makefile
 src/zapit/src/Makefile
+])
+
+# Webserver config
+AC_CONFIG_FILES([
+src/nhttpd/nhttpd.conf
+])
+
+# Themes
+AC_CONFIG_FILES([
+data/themes/Material_Blue-Grey.theme
 ])
 
 AC_OUTPUT
