- data/oled/themes: remove some hardcoded paths

--- a/data/oled/themes/480x320/Easy.otheme.in
+++ b/data/oled/themes/480x320/Easy.otheme.in
@@ -8,35 +8,35 @@ glcd_foreground_color_blue=100
 glcd_background_color_red=0
 glcd_background_color_green=0
 glcd_background_color_blue=0
-glcd_background_image=/share/tuxbox/neutrino/icons/oled/simple.png
-glcd_font=/share/fonts/neutrino.ttf
-glcd_channel_percent=20
+glcd_background_image=@ICONSDIR@/oled/easy.png
+glcd_font=@FONTDIR@/neutrino.ttf
+glcd_channel_percent=22
 glcd_channel_align=2
 glcd_channel_x_position=0
-glcd_channel_y_position=51
+glcd_channel_y_position=22
 glcd_logo=true
-glcd_logo_percent=20
+glcd_logo_percent=22
 glcd_logo_x_position=0
-glcd_logo_y_position=51
-glcd_epg_percent=16
+glcd_logo_y_position=22
+glcd_epg_percent=18
 glcd_epg_align=2
 glcd_epg_x_position=0
-glcd_epg_y_position=241
+glcd_epg_y_position=152
 glcd_start=false
 glcd_start_percent=0
 glcd_start_align=0
 glcd_start_x_position=0
 glcd_start_y_position=0
 glcd_end=false
-glcd_end_percent=14
+glcd_end_percent=0
 glcd_end_align=0
 glcd_end_x_position=0
 glcd_end_y_position=0
-glcd_duration=false
-glcd_duration_percent=0
-glcd_duration_align=0
+glcd_duration=true
+glcd_duration_percent=14
+glcd_duration_align=3
 glcd_duration_x_position=0
-glcd_duration_y_position=0
+glcd_duration_y_position=261
 glcd_progressbar=false
 glcd_progressbar_color_red=62
 glcd_progressbar_color_green=62
@@ -45,11 +45,11 @@ glcd_progressbar_percent=0
 glcd_progressbar_width=0
 glcd_progressbar_x_position=0
 glcd_progressbar_y_position=0
-glcd_time=false
-glcd_time_percent=0
-glcd_time_align=0
+glcd_time=true
+glcd_time_percent=14
+glcd_time_align=1
 glcd_time_x_position=0
-glcd_time_y_position=0
+glcd_time_y_position=261
 glcd_icons_percent=4
 glcd_icons_y_position=6
 glcd_icon_ecm_x_position=100
