--- a/data/oled/themes/480x320/Makefile.am
+++ b/data/oled/themes/480x320/Makefile.am
@@ -1,3 +1,11 @@
+EXTRA_DIST = \
+	Default.otheme Default.otheme.in \
+	Advanced.otheme Advanced.otheme.in \
+	Easy.otheme Easy.otheme.in \
+	Medium.otheme Medium.otheme.in \
+	Simple.otheme Simple.otheme.in \
+	Weather.otheme Weather.otheme.in
+
 oledthemesdir = $(THEMESDIR)/oled
 
 oledthemes_DATA = \
