--- a/data/oled/themes/800x480/Default.otheme.in
+++ b/data/oled/themes/800x480/Default.otheme.in
@@ -9,7 +9,7 @@ glcd_background_color_red=0
 glcd_background_color_green=0
 glcd_background_color_blue=0
 glcd_background_image=
-glcd_font=/share/fonts/neutrino.ttf
+glcd_font=@FONTDIR@/neutrino.ttf
 glcd_channel_percent=25
 glcd_channel_align=2
 glcd_channel_x_position=0
