--- a/data/oled/themes/480x320/Advanced.otheme.in
+++ b/data/oled/themes/480x320/Advanced.otheme.in
@@ -8,8 +8,8 @@ glcd_foreground_color_blue=100
 glcd_background_color_red=0
 glcd_background_color_green=0
 glcd_background_color_blue=0
-glcd_background_image=/share/tuxbox/neutrino/icons/oled/weather.png
-glcd_font=/share/fonts/neutrino.ttf
+glcd_background_image=@ICONSDIR@/oled/advanced.png
+glcd_font=@FONTDIR@/neutrino.ttf
 glcd_channel_percent=22
 glcd_channel_align=2
 glcd_channel_x_position=0
@@ -18,7 +18,7 @@ glcd_logo=true
 glcd_logo_percent=22
 glcd_logo_x_position=0
 glcd_logo_y_position=22
-glcd_epg_percent=14
+glcd_epg_percent=15
 glcd_epg_align=2
 glcd_epg_x_position=0
 glcd_epg_y_position=133
@@ -31,8 +31,8 @@ glcd_end=true
 glcd_end_percent=14
 glcd_end_align=3
 glcd_end_x_position=0
-glcd_end_y_position=185
-glcd_duration=false
+glcd_end_y_position=224
+glcd_duration=true
 glcd_duration_percent=14
 glcd_duration_align=3
 glcd_duration_x_position=0
@@ -42,14 +42,14 @@ glcd_progressbar_color_red=62
 glcd_progressbar_color_green=62
 glcd_progressbar_color_blue=62
 glcd_progressbar_percent=22
-glcd_progressbar_width=313
-glcd_progressbar_x_position=18
-glcd_progressbar_y_position=201
-glcd_time=false
-glcd_time_percent=0
+glcd_progressbar_width=311
+glcd_progressbar_x_position=23
+glcd_progressbar_y_position=216
+glcd_time=true
+glcd_time_percent=14
 glcd_time_align=1
 glcd_time_x_position=0
-glcd_time_y_position=0
+glcd_time_y_position=261
 glcd_icons_percent=4
 glcd_icons_y_position=6
 glcd_icon_ecm_x_position=100
@@ -60,10 +60,10 @@ glcd_icon_mute_x_position=273
 glcd_icon_timer_x_position=333
 glcd_icon_rec_x_position=398
 glcd_icon_ts_x_position=443
-glcd_weather=true
-glcd_weather_curr_x_position=45
-glcd_weather_next_x_position=375
-glcd_weather_y_position=240
+glcd_weather=false
+glcd_weather_curr_x_position=0
+glcd_weather_next_x_position=0
+glcd_weather_y_position=0
 glcd_standby_clock_digital_y_position=20
 glcd_standby_clock_simple_size=40
 glcd_standby_clock_simple_y_position=20
