--- a/configure.ac
+++ b/configure.ac
@@ -478,6 +478,14 @@ AC_CONFIG_FILES([
 data/control/migration.sh
 ])
 
+# Backup scripts
+AC_CONFIG_FILES([
+data/scripts/backup.sh
+data/scripts/restore.sh
+data/scripts/backup_flash.sh
+data/scripts/restore_flash.sh
+])
+
 # Backup configs
 AC_CONFIG_FILES([
 data/config/settingsupdate.conf
