cc_frm_slider: rework slider slider handling

--- a/data/icons/slider/Makefile.am
+++ b/data/icons/slider/Makefile.am
@@ -4,6 +4,7 @@ install_DATA = \
 	slider_alpha.png \
 	slider_blue.png \
 	slider_body.png \
+	slider_body_progress.png \
 	slider_green.png \
 	slider_inactive.png \
 	slider_red.png
