- backup.sh: add rc.local

--- a/data/scripts/backup.sh.in
+++ b/data/scripts/backup.sh.in
@@ -46,6 +46,7 @@ TOBACKUP="\
 	/etc/network/interfaces \
 	/etc/passwd \
 	/etc/profile.local \
+	/etc/rc.local \
 	/etc/resolv.conf \
 	/etc/samba/smb.conf \
 	/etc/wpa_supplicant.conf \
