update_check: add class for package update checks

--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -105,6 +105,7 @@ libneutrino_gui_a_SOURCES = \
 	timeosd.cpp \
 	update.cpp \
 	update_check.cpp \
+	update_check_packages.cpp \
 	update_menue.cpp \
 	update_settings.cpp \
 	user_menue.cpp \
