fix directory for epgmap.xml

--- a/data/zapit/Makefile.am
+++ b/data/zapit/Makefile.am
@@ -1,7 +1,8 @@
 installdir = $(CONFIGDIR)/zapit
 
 install_DATA = \
-	myservices.xml
+	myservices.xml \
+	epgmap.xml
 
 #install-data-hook:
 #	$(INSTALL) -d $(DESTDIR)/$(CONFIGDIR)/zapit
