--- a/data/icons/hints/Makefile.am
+++ b/data/icons/hints/Makefile.am
@@ -63,6 +63,7 @@ install_DATA = \
 	hint_vfd.png \
 	hint_video.png \
 	hint_vtxt.png \
+	hint_webradio.png \
 	hint_webtv.png \
 	hint_xmltv.png \
 	hint_ytplay.png
