--- a/data/scripts/Makefile.am
+++ b/data/scripts/Makefile.am
@@ -2,13 +2,15 @@ EXTRA_DIST = \
 	backup.sh backup.sh.in \
 	restore.sh restore.sh.in \
 	backup_flash.sh backup_flash.sh.in \
-	restore_flash.sh restore_flash.sh.in
+	restore_flash.sh restore_flash.sh.in \
+	migration.sh migration.sh.in
 
 installdir = $(bindir)
 
 install_SCRIPTS = \
 	backup.sh \
 	restore.sh \
+	migration.sh \
 	wakeup.sh \
 	install.sh 
 
