- scripts: move flash.start script away from control scripts

--- a/data/scripts/Makefile.am
+++ b/data/scripts/Makefile.am
@@ -12,6 +12,9 @@ install_SCRIPTS = \
 	wakeup.sh \
 	install.sh 
 
+install_SCRIPTS += \
+	start_flash.sh \
+
 if BOXMODEL_CST_HD2
 install_SCRIPTS += \
 	backup_flash.sh \
