--- a/data/scripts/Makefile.am
+++ b/data/scripts/Makefile.am
@@ -15,7 +15,7 @@ install_SCRIPTS = \
 	install.sh 
 
 install_SCRIPTS += \
-	start_flash.sh \
+	start_flash.sh
 
 if BOXMODEL_CST_HD2
 install_SCRIPTS += \
