- configure: update ait scan for hbbtv url configurable

--- a/configure.ac
+++ b/configure.ac
@@ -187,11 +187,6 @@ AC_ARG_ENABLE(graphlcd,
 	AC_DEFINE(ENABLE_GRAPHLCD, 1, [enable GraphLCD support]))
 AM_CONDITIONAL(ENABLE_GRAPHLCD, test "$enable_graphlcd" = "yes")
 
-AC_ARG_ENABLE(hbbtv,
-	AS_HELP_STRING([--enable-hbbtv], [enable HBBTV support @<:@default=no@:>@]),
-	AC_DEFINE(ENABLE_HBBTV, 1, [enable HBBTV support]))
-AM_CONDITIONAL(ENABLE_HBBTV, test "$enable_hbbtv" = "yes")
-
 AC_ARG_ENABLE(keyboard-no-rc,
 	AS_HELP_STRING([--enable-keyboard-no-rc], [enable keyboard control, disable rc control @<:@default=no@:>@]),
 	AC_DEFINE(KEYBOARD_INSTEAD_OF_REMOTE_CONTROL, 1, [enable keyboard control, disable rc control]))
@@ -227,6 +222,16 @@ AC_ARG_ENABLE(flac,
 	AS_HELP_STRING([--enable-flac], [enable FLAC support @<:@default=no@:>@]),
 	AC_DEFINE(ENABLE_FLAC, 1, [enable FLAC support]))
 AM_CONDITIONAL(ENABLE_FLAC, test "$enable_flac" = "yes")
+
+AC_ARG_ENABLE(hbbtv,
+	AS_HELP_STRING([--enable-hbbtv], [enable HbbTV support @<:@default=yes@:>@]),
+	[enable_hbbtv="$enableval"],
+	[enable_hbbtv="yes"])
+
+if test "$enable_hbbtv" = "yes"; then
+	AC_DEFINE(ENABLE_HBBTV, 1, [enable HbbTV support])
+fi
+AM_CONDITIONAL(ENABLE_HBBTV, test "$enable_hbbtv" = "yes")
 
 AC_ARG_ENABLE(upnp,
 	AS_HELP_STRING([--enable-upnp], [enable UPNP support @<:@default=yes@:>@]),
