- icons/hourglass: add "animated" hourglass for non-CST hardware

--- a/data/icons/hourglass/Makefile.am
+++ b/data/icons/hourglass/Makefile.am
@@ -1,4 +1,19 @@
 installdir = $(ICONSDIR)
 
+if BOXTYPE_CST
 install_DATA = \
 	hourglass.png
+else
+install_DATA = \
+	hourglass0.png \
+	hourglass1.png \
+	hourglass2.png \
+	hourglass3.png \
+	hourglass4.png \
+	hourglass5.png \
+	hourglass6.png \
+	hourglass7.png \
+	hourglass8.png \
+	hourglass9.png \
+	hourglass10.png
+endif
