- rename libcoolstream-mt => libcoolstream

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -157,9 +157,9 @@ neutrino_LDADD += \
 	$(top_builddir)/lib/hardware/coolstream/libhwcaps.a
 if ENABLE_LIBCOOLSTREAM_STATIC
 neutrino_LDADD += -lca-sc
-neutrino_LDADD += @LIBCOOLSTREAM_STATIC_DIR@/libcoolstream-mt.a
+neutrino_LDADD += @LIBCOOLSTREAM_STATIC_DIR@/libcoolstream.a
 else
-neutrino_LDADD += -lcoolstream-mt -lca-sc
+neutrino_LDADD += -lcoolstream -lca-sc
 endif
 
 if BOXMODEL_CST_HD2
