- icons: rename icon_movieplayer.png and icon_ytplay.png

--- a/data/icons/headers/Makefile.am
+++ b/data/icons/headers/Makefile.am
@@ -10,16 +10,15 @@ install_DATA = \
 	features.png \
 	games.png \
 	icon_green.png \
-	icon_movieplayer.png \
 	icon_red.png \
 	icon_yellow.png \
-	icon_ytplay.png \
 	information.png \
 	keybinding.png \
 	language.png \
 	lcd.png \
 	lock.png \
 	mainmenue.png \
+	movieplayer.png \
 	multimedia.png \
 	network.png \
 	personalize.png \
@@ -33,4 +32,5 @@ install_DATA = \
 	streaming.png \
 	timer.png \
 	upnp.png \
-	video.png
+	video.png \
+	ytplay.png
