--- a/data/scripts/backup.sh.in
+++ b/data/scripts/backup.sh.in
@@ -30,7 +30,8 @@ TOBACKUP="\
 	@CONFIGDIR@/tuxwetter/tuxwetter.conf \
 	@CONFIGDIR@/tuxwetter/tuxwetter.mcfg \
 	@CONFIGDIR@/Y-Web.conf \
-	@CONFIGDIR@/zapit/ \
+	\
+	@ZAPITDIR@/ \
 	\
 	@FLAGDIR@/ \
 	\
