--- a/data/zapit/Makefile.am
+++ b/data/zapit/Makefile.am
@@ -1,8 +1,8 @@
-installdir = $(CONFIGDIR)/zapit
+installdir = $(ZAPITDIR)
 
 install_DATA = \
 	myservices.xml \
 	epgmap.xml
 
 #install-data-hook:
-#	$(INSTALL) -d $(DESTDIR)/$(CONFIGDIR)/zapit
+#	$(INSTALL) -d $(DESTDIR)/$(ZAPITDIR)
