--- a/configure.ac
+++ b/configure.ac
@@ -307,7 +307,7 @@ AC_ARG_ENABLE(pip,
 AM_CONDITIONAL(ENABLE_PIP, test "$enable_pip" = "yes")
 
 case "$BOXMODEL" in
-	hd51|vusolo4k|vuduo4k|vuduo4kse|vuultimo4k|vuuno4k|vuuno4kse)
+	vusolo4k|vuduo4k|vuduo4kse|vuultimo4k|vuuno4k|vuuno4kse)
 		AC_ARG_ENABLE(quadpip,
 			AS_HELP_STRING([--enable-quadpip], [enable quad picture in picture support @<:@default=no@:>@]),
 			AC_DEFINE(ENABLE_QUADPIP, 1, [enable quad picture in picture support]))
