- nlab: creating symlink from $(LUAPLUGINDIR) to $(bindir)

--- a/data/luaplugins/Makefile.am
+++ b/data/luaplugins/Makefile.am
@@ -2,3 +2,9 @@ installdir = $(LUAPLUGINDIR)
 
 install_SCRIPTS = \
 	nlab.lua
+
+install-data-hook:
+	ln -sf $(LUAPLUGINDIR)/nlab.lua $(DESTDIR)$(bindir)/nlab
+
+uninstall-hook:
+	rm -f $(DESTDIR)$(bindir)/nlab
