- remove unmaintained locales

--- a/data/icons/locale/Makefile.am
+++ b/data/icons/locale/Makefile.am
@@ -6,18 +6,6 @@ install_DATA = \
 
 unmaintained = \
 	nederlands.png \
-	slovak.png \
-	unmaintained/bayrisch.png \
-	unmaintained/bosanski.png \
-	unmaintained/ch-baslerdeutsch.png \
-	unmaintained/ch-berndeutsch.png \
-	unmaintained/czech.png \
-	unmaintained/francais.png \
-	unmaintained/italiano.png \
-	unmaintained/polski.png \
-	unmaintained/portugues.png \
-	unmaintained/russkij.png \
-	unmaintained/suomi.png \
-	unmaintained/svenska.png
+	slovak.png
 
 #install_DATA += $(unmaintained)
