--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -159,6 +159,11 @@ libneutrino_gui_a_SOURCES += \
 	psisetup.cpp
 endif
 
+if BOXTYPE_MIPSBOX
+libneutrino_gui_a_SOURCES += \
+	psisetup.cpp
+endif
+
 #NI if ENABLE_TESTING
 libneutrino_gui_a_SOURCES += \
 	test_menu.cpp
