--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -99,6 +99,7 @@ libneutrino_gui_a_SOURCES = \
 	sleeptimer.cpp \
 	start_wizard.cpp \
 	subchannel_select.cpp \
+	test_menu.cpp \
 	themes.cpp \
 	timeosd.cpp \
 	update.cpp \
@@ -163,11 +164,6 @@ if BOXTYPE_MIPSBOX
 libneutrino_gui_a_SOURCES += \
 	psisetup.cpp
 endif
-
-#NI if ENABLE_TESTING
-libneutrino_gui_a_SOURCES += \
-	test_menu.cpp
-#NI endif
 
 libneutrino_gui2_a_SOURCES = \
 	cam_menu.cpp \
