--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -3,6 +3,7 @@ BUILT_SOURCES = version.h
 version.h:
 	@rm -f $@; \
 	echo "#define BUILT_DATE \"$$(date)\"" > $@
+	echo "#define BUILT_TIMESTAMP \"$$(date +%s)\"" >> $@
 	@if test -d $(top_srcdir)/.git ; then \
 		pushd $(top_srcdir) ; \
 		GITTAG=$$(git tag -l "NI-*" | tail -n1); \
