- src/gui/Makefile.am: small addition to 8b49533d97812e67c804507b01f7fc9660c2bc31

--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -1,9 +1,9 @@
 AM_CPPFLAGS = -fno-rtti -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS
 BUILT_SOURCES = version.h
 version.h:
-	@rm -f $@; \
-	echo "#define BUILT_DATE \"$$(date)\"" > $@
-	echo "#define BUILT_TIMESTAMP \"$$(date +%s)\"" >> $@
+	@rm -f $@
+	@echo "#define BUILT_DATE \"$$(date)\"" > $@
+	@echo "#define BUILT_TIMESTAMP \"$$(date +%s)\"" >> $@
 	@if test -d $(top_srcdir)/.git ; then \
 		pushd $(top_srcdir) ; \
 		GITTAG=$$(git tag -l "NI-*" | tail -n1); \
