--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -115,6 +115,7 @@ libneutrino_gui_a_SOURCES = \
 	videosettings.cpp \
 	volumebar.cpp \
 	weather.cpp \
+	weather_setup.cpp \
 	webchannels_setup.cpp \
 	xmltv_setup.cpp \
 	zapit_setup.cpp
