- yWeb: add lcd4linux page

--- a/configure.ac
+++ b/configure.ac
@@ -460,6 +460,7 @@ data/y-web/favicon/Makefile
 data/y-web/images/Makefile
 data/y-web/info/Makefile
 data/y-web/jquery/Makefile
+data/y-web/lcd4linux/Makefile
 data/y-web/languages/Makefile
 data/y-web/scripts/Makefile
 data/y-web/styles/Makefile
