- data/scripts/backup.sh.in: add neutrino-mediathek.conf

--- a/data/scripts/backup.sh.in
+++ b/data/scripts/backup.sh.in
@@ -16,6 +16,7 @@ TOBACKUP="\
 	@CONFIGDIR@/FritzCallMonitor.cfg \
 	@CONFIGDIR@/moviebrowser.conf \
 	@CONFIGDIR@/neutrino.conf \
+	@CONFIGDIR@/neutrino-mediathek.conf \
 	@CONFIGDIR@/oscam.* \
 	@CONFIGDIR@/oscammon.conf \
 	@CONFIGDIR@/plugins-hide.conf \
