- yWeb: rename Y_Blocks files

--- a/data/y-web/Makefile.am
+++ b/data/y-web/Makefile.am
@@ -14,6 +14,7 @@ install_DATA =	channels.js \
 		Y_About.yhtm \
 		Y_Baselib.js \
 		Y_Blocks.txt \
+		Y_Blocks_Neutrino.txt \
 		Y_Boxcontrol_Bouquet_Editor_Edit.yhtm \
 		Y_Boxcontrol_Bouquet_Editor_Main.yhtm \
 		Y_Boxcontrol_Bouquetlist.yhtm \
@@ -38,7 +39,6 @@ install_DATA =	channels.js \
 		Y_Live_EPG.yhtm \
 		Y_Main.css \
 		Y_Menue.yhtm \
-		Y_neutrino_Blocks.txt \
 		Y_Refresh.yhtm \
 		Y_Settings_automount_liste.yhtm \
 		Y_Settings_automount.yhtm \
@@ -79,9 +79,9 @@ install_DATA =	channels.js \
 # file manager
 install_DATA +=	accordion.js \
 		effects.js \
+		Y_Blocks_Filemgr.txt \
 		Y_Filemgr.yhtm \
-		Y_Filemgr_Edit.yhtm \
-		Y_Filemgr_blocks.txt
+		Y_Filemgr_Edit.yhtm
 
 # NI-yWeb
 install_DATA += Y_NIlib.js \
