- Makefile: fix rcsim.h target

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 BUILT_SOURCES = rcsim.h
 # ugly: this is in the source tree, but belongs into the build dir :-(
-rcsim.h: $(srcdir)/driver/rcinput.h $(srcdir)/create_rcsim_h.sh
+rcsim.h: $(srcdir)/driver/rcinput.h $(srcdir)/driver/rcinput_fake.h $(srcdir)/create_rcsim_h.sh
 	pushd $(srcdir) && sh ./create_rcsim_h.sh > $@
 
 AM_CXXFLAGS = -fno-rtti -fno-exceptions -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS
