--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -127,6 +127,11 @@ neutrino_LDADD = \
 	-lrt -lpthread \
 	-lz
 
+# LCD display
+if ENABLE_LCD
+neutrino_LDADD += $(top_builddir)/lib/liblcddisplay/liblcddisplay.a
+endif
+
 if ENABLE_GRAPHLCD
 neutrino_LDADD += \
 	driver/glcd/libneutrino_driver_glcd.a \
