--- a/configure.ac
+++ b/configure.ac
@@ -540,6 +540,7 @@ data/themes/Material_Blue-Grey.theme
 
 # Oled themes
 AC_CONFIG_FILES([
+data/oled/themes/220x176/Default.otheme
 data/oled/themes/400x240/Default.otheme
 data/oled/themes/480x320/Default.otheme
 data/oled/themes/480x320/Advanced.otheme
