E4HD 4K Ultra added (not yet ready)

--- a/data/y-web/images/Makefile.am
+++ b/data/y-web/images/Makefile.am
@@ -113,6 +113,7 @@ if ! BOXTYPE_CST
 imagesrc_DATA += \
 	rc/rc_ax_hd51.png \
 	rc/rc_ax_hd61.png \
+	rc/rc_axas_e4hd.png \
 	rc/rc_mutant_hd51.png \
 	rc/rc_wwio_bre2ze4k.png \
 	rc/rc_zgemma_h7.png \
