--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -83,10 +83,12 @@ endif
 if BOXTYPE_ARMBOX
 if ENABLE_LCD
 libneutrino_driver_a_SOURCES += \
+	hdmi_cec.cpp \
 	fb_accel_arm.cpp \
 	lcdd.cpp
 else
 libneutrino_driver_a_SOURCES += \
+	hdmi_cec.cpp \
 	fb_accel_arm.cpp \
 	simple_display.cpp
 endif
@@ -94,6 +96,7 @@ endif
 
 if BOXTYPE_MIPSBOX
 libneutrino_driver_a_SOURCES += \
+	hdmi_cec.cpp \
 	fb_accel_mips.cpp \
 	simple_display.cpp
 endif
