--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -48,6 +48,7 @@ libneutrino_driver_a_SOURCES = \
 	screen_max.cpp \
 	screenshot.cpp \
 	shutdown_count.cpp \
+	slide.cpp \
 	streamts.cpp \
 	volume.cpp
 
